[package]
name = "omega-learning-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automata = { git = "https://github.com/leonbohn/automata", rev = "cefc759" }
automata-learning = { path = "../automata-learning" }
csv = "1.3.0"
itertools = "0.13.0"
